[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=7.0"]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = [
  "PyPDF2>=3.0.0",
]
description = "A lightweight Python utility for effortlessly merging multiple PDF files"
dynamic = ["version"]
keywords = ["pdf", "merge", "pypdf2", "automation", "cli"]
license = {text = "MIT"}
name = "pdfusion"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3.0",
  "pytest-cov>=6.0.0",
  "black>=24.10.0",
  "isort>=5.12",
  "flake8>=7.1",
  "mypy>=1.5",
  "ruff>=0.0.291",
]

[project.scripts]
pdfusion = "pdfusion.pdfusion:main"

[tool.setuptools_scm]
write_to = "pdfusion/_version.py"

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ["py311"]

[tool.isort]
line_length = 88
multi_line_output = 3
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
ignore = []
line-length = 88
select = ["E", "F", "B", "I", "W", "C", "B", "UP"]
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=pdfusion"
minversion = "7.0"
testpaths = [
  "tests",
]
